--- a/contact.html
+++ b/contact.html
@@ -51,36 +51,36 @@
             
             <form action="https://formspree.io/f/xqkgbzjg" method="post">
                 <div class="form-group row">
-                    <label for="FirstName" class="col-sm-2 col-form-label">
+                    <label for="FirstName" class="col-md-2 col-form-label">
                         First Name
                     </label>
-                    <div class="col-sm-10">
+                    <div class="col-md-10">
                         <input type="text" name="FirstName" class="form-control" id="FirstName">
                     </div>
                 </div>
 
                 
                 <div class="form-group row">
-                    <label class="col-sm-2 col-form-label" for="LastName">Last Name</label>
-                    <div class="col-sm-10">
+                    <label class="col-md-2 col-form-label" for="LastName">Last Name</label>
+                    <div class="col-md-10">
                         <input type="text" name="LastName" class="form-control" id="LastName">
                     </div>
                 </div>
-                <div>
-                    <span class="formText">Email Address</span>
-                    <span class="formEntry">
-                        <input type="text" name="eMail">
-                    </span>
+                <div class="form-group row">
+                    <label class="col-md-2 col-form-label" for="txteMail">Email Address</label>
+                    <div class="col-md-10">
+                        <input type="text" name="eMail"  class="form-control" id="txteMail">
+                    </div>
                 </div>
                 <div class="form-check">
                     <input type="radio" name="preferredContact" value="email" class="form-check-input" id="radioemail"> 
                     <label for="radioemail" class="form-check-label">I prefer eMail</label>
                 </div>
                 <div>
-                    <span class="formText">Phone Number</span>
-                    <span class="formEntry">
-                        <input type="text" name="PhoneNumber">
-                    </span>
+                    <label class="col-md-2 col-form-label" for="txtPhone">Phone Number</label>
+                    <div class="col-md-10">
+                        <input type="text" name="PhoneNumber"  class="form-control" id="txtPhone">
+                    </div>
                 </div>
                 <div class="form-check">
                     <input type="radio" name="preferredContact" value="phone" class="form-check-input" id="radiophone">
